--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="about">
         <h2>About Me</h2>
         <p>
-            I am a beginner web developer learning HTML, CSS, JavaScript and Python.
+            I am a beginner Data Science and analytics person learning SQL, Power Bi and Python.
             I am passionate about creating simple, clean and user-friendly websites.
             Currently, I am building projects to grow my skills and start freelancing.
         </p>
